# ed_perception

./: .travis.yml  CMakeLists.txt  README.md  package.xml
action/: FaceLearning.action
ed_perception/: CMakeLists.txt  package.xml  plugins.xml  rosdoc.yaml
ed_perception/plugins/: face_detector.h  face_recognition.cpp  face_recognition.h  human_classifier.cpp  human_classifier_structs.h  human_contour_matcher.h  open_biometrics_ed.cpp  open_biometrics_ed.h  qr_detector.cpp  shared_methods.cpp  size_matcher.cpp  size_matcher.h  type_aggregator.h
ed_perception/plugins/color_matcher/: color_matcher.cpp  color_name_table.h
ed_perception/plugins/laser_human_classifier/: laser_human_chest_classifier.h
ed_perception/plugins/odu_finder/: odu_finder_module.cpp
ed_perception/src/: annotated_image.cpp  annotated_image.h  annotation_gui.cpp  image_crawler.cpp  perception_plugin_image_recognition.cpp  perception_plugin_image_recognition.h  store_segments.cpp
ed_perception_msgs/: CMakeLists.txt  package.xml
include/ed/perception/: aggregator.h  categorical_distribution.h  module.h  worker.h  worker_input.h  worker_output.h
msg/: CategoricalDistribution.msg  PersonDetection.msg
nodes/: face_recognition.cpp  face_recognizer.cpp  face_recognizer.h
plugins/: face_detector.cpp  face_detector.h  face_recognition.cpp  face_recognition.h  human_classifier.cpp  human_classifier.h  human_contour_matcher.cpp  human_contour_matcher.h  open_biometrics_ed.cpp  open_biometrics_ed.h  qr_detector.h  shared_methods.cpp  shared_methods.h  size_matcher.cpp  size_matcher.h  type_aggregator.cpp  type_aggregator.h
plugins/color_matcher/: color_matcher.cpp  color_matcher.h  color_name_table.cpp  color_name_table.h
plugins/laser_human_classifier/: laser_human_chest_classifier.cpp  laser_human_chest_classifier.h
plugins/odu_finder/: odu_finder.cpp  odu_finder.h  odu_finder_module.cpp  odu_finder_module.h
scripts/: face_recognizer_dummy_node.py  load_object_types.py  object_recognition_dummy_node.py
src/: aggregator.cpp  annotated_image.cpp  annotation_gui.cpp  categorical_distribution.cpp  module.cpp  perception_plugin.cpp  perception_plugin.h  perception_plugin_image_recognition.cpp  perception_plugin_image_recognition.h  perception_plugin_tensorflow.cpp  perception_plugin_tensorflow.h  store_segments.cpp  worker.cpp
srv/: AddTrainingInstance.srv  Classify.srv  LearnPerson.srv  RecognizePerson.srv
tools/: annotated_image.cpp  annotated_image.h  annotation_gui.cpp  confusionmatrix.cpp  confusionmatrix.h  ed_learning_tool.cpp  entity_live_viewer.cpp  entity_live_viewer.h  image_crawler.cpp  image_crawler.h  learn_person.py  odu_finder_db_builder.cpp  odu_finder_learner.cpp  openface_recognition.py  store_segments.cpp  test_perception.cpp  test_perception2.cpp  test_perception3.cpp
tools/annotation_gui/src/: annotation_gui.cpp
tools/entity_live_viewer/: entity_live_viewer_cv.cpp  entity_live_viewer_cv.h  entity_live_viewer_form.ui  entity_live_viewer_server.cpp  entity_live_viewer_server.h  entity_viewer_common.cpp  entity_viewer_common.h  entity_viewer_probe.cpp  entity_viewer_probe.h  test_ui.cpp  ui_entity_live_viewer_form.h  viewer_ui.cpp  viewer_ui.h
tools/old/: odu_finder_db_builder.cpp
tools/old/entity_live_viewer/: entity_live_viewer_cv.h  entity_viewer_common.h  entity_viewer_probe.cpp  viewer_ui.cpp  viewer_ui.h
tools/train_and_test/: annotated_image.cpp  annotation_gui.cpp  image_crawler.cpp  image_crawler.h  test.cpp  train.cpp
