<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_perception</name>
  <version>0.0.0</version>
  <description>ed_perception</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <build_depend>ed_object_models</build_depend>
  <build_depend>ed_perception_msgs</build_depend>
  <build_depend>ed_sensor_integration</build_depend>
  <build_depend>geolib2</build_depend>
  <build_depend>image_recognition_msgs</build_depend>
  <build_depend>rgbd</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>tue_config</build_depend>
  <build_depend>tue_filesystem</build_depend>
  <build_depend>zbar</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>ed</exec_depend>
  <exec_depend>ed_object_models</exec_depend>
  <exec_depend>ed_perception_msgs</exec_depend>
  <exec_depend>ed_sensor_integration</exec_depend>
  <exec_depend>geolib2</exec_depend>
  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>rgbd</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>tue_config</exec_depend>
  <exec_depend>tue_filesystem</exec_depend>
  <exec_depend>zbar</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>
