<?xml version="1.0"?>
<package>
  <name>ed_perception_msgs</name>
  <version>0.0.0</version>
  <description>Messages for ed_perception</description>

  <maintainer email="amigo@todo.nl">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
